feat:nambah open API Doc Spec
